--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
         </p>
     </section>
     <script>
+        // this is navbar script //
  document.addEventListener("DOMContentLoaded", function() {
         const menuIcon = document.getElementById('menu-icon');
         const navbarLinks = document.getElementById('navbar-links');
